tests/NormalTests/paczka1/fuzzy1/22434134.err
Error in line 4: wk8A31r2 S61 56,1
Error in line 1: A9xYkX8 A623 29,0
Error in line 2: hFBAoYOUd S501 56,6
Error in line 16: A9xYkX8 S61 73,6
Error in line 22: A623 S810 97,4
Error in line 29: U3T A623 0,01
Error in line 26: A623 S61 28,2
Error in line 37: w©8A31r2 S501 91,5
